# django-assets-manager

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-package.yml
django_assets_manager/: __init__.py  apps.py  checks.py  finders.py  settings.py  utils.py
django_assets_manager/management/commands/: compilesprites.py
django_assets_manager/templates/assets_manager/: css.html  js.html
django_assets_manager/templatetags/: assets_manager.py
tests/: settings.py  tests.py
tests/templates/django/assets_manager/: custom.html
