[project]
name = "django_assets_manager"
description = "Assets management for django"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["django", "assets", "sprites"]
license = {text = "MIT"}
dynamic = ["version"]
authors = [
	{ name = "Miroslav Bendík", email = "miroslav.bendik@gmail.com" }
]
classifiers = [
	"Programming Language :: Python :: 3",
]
dependencies = [
	"django",
	"pillow",
]

[project.urls]
homepage = "https://github.com/mireq/django-assets-manager"
documentation = "https://github.com/mireq/django-assets-manager"
repository = "https://github.com/mireq/django-assets-manager"
changelog = "https://github.com/mireq/django-assets-manager/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
	"tox",
	"pylint",
	"pre-commit",
	"bump2version",
	"commitizen",
	"django_jinja"
]

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["django_assets_manager*"]

[tool.setuptools_scm]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "$version"
